--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "express": "^4.17.1",
+    "install": "^0.13.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
